overflow ellipses fix

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -124,7 +124,7 @@
   .profile__profession {
     margin-left: 30px;
     margin-top: 16px;
-    max-width: 350px
+    max-width: 350px;
   }
 
 .profile__button-edit {
